# PostG_Refactor

./: .gitignore  AGENTS.md  docs_system_review_and_optimization_plan.md  docs_thesis_draft.md  启动诗词推荐系统.bat
.sisyphus/plans/: refactor_plan.md  (+1 more)
backend/: app.py  config.py  database_schema.sql  database_setup.sql  download_model.py  environment.yml  gen_sql.py  generate_realistic_data.py  import_poems.py  models.py  pyproject.toml  realistic_reviews.json  realistic_reviews.sql  requirements.txt  run_server.py  test_search.py  test_search_direct.py  topic_service.py  新建 文本文档.txt  论文目录.txt
backend/core/: __init__.py  bertopic_enhanced_cf.py  bertopic_recommender.py  collaborative_filter.py  content_recommender.py  hybrid_cf.py  hybrid_strategy.py  sentencetransformer_enhanced_cf.py
backend/data/cache/: poem_ids.json  poetry_embeddings.npy  sem_embeddings.npy  sem_embeddings_v3.npy  sem_ids.json  sem_ids_v3.json  topic_matrix.npy
backend/experiments/: EXPERIMENT_DESIGN.md  comparison.ipynb  fair_experiment.py  fangan.md  final_experiment.py  gold_experiment.py  gold_experiment_review.md  movielens_colab_experiment.ipynb  movielens_colab_experiment_v2.ipynb  movielens_experiment.ipynb  movielens_experiment.py  optimized_experiment.py  platium_experiment.py
data/: mode.md  poetry_stopwords.txt  scu_stopwords.txt
docs/: mid_term_defense_v2.md  ~$毕业论文模板.doc  毕业论文模板.docx
experiments/: cold_start_experiment.py  good_v4.ipynb
frontend/: index.html  package.json  postcss.config.cjs  vite.config.js
论文/: thesis-current.txt  thesis-full-v1.md  基于协同过滤的诗歌推荐系统设计与实现.docx
(+19 files in other folders)
