[project]
name = "postg-refactor"
version = "1.0.0"
description = "Poetry Recommendation System with BERTopic"
requires-python = ">=3.10"
dependencies = [
    "flask-sqlalchemy",
    "pymysql",
    "cryptography",
    "flask",
    "flask-cors",
    "jieba",
    "numpy",
    "pandas",
    "opencc",
    "pypinyin",
    "bertopic>=0.16.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.0.0",
    "accelerate>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
